force-app/main/default/objects/Interessado__c/Interessado__c.object-meta.xml
<CustomObject>
    <label>Interessado</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interessados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>