force-app/main/default/objects/Interessado__c/fields/ChaveUnica__c.field-meta.xml
<CustomField>
    <fullName>ChaveUnica__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Chave Única</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>