force-app/main/default/objects/Interessado__c/fields/ConclusaoTrecho__c.field-meta.xml
<CustomField>
    <fullName>ConclusaoTrecho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conclusão do Trecho</label>
    <type>Checkbox</type>
</CustomField>