force-app/main/default/objects/Interessado__c/fields/ConclusaoVoo__c.field-meta.xml
<CustomField>
    <fullName>ConclusaoVoo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conclusão do Voo</label>
    <type>Checkbox</type>
</CustomField>