force-app/main/default/objects/Interessado__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interessados</relationshipLabel>
    <relationshipName>Interessados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>