force-app/main/default/objects/Interessado__c/fields/EmissaoEmbarque__c.field-meta.xml
<CustomField>
    <fullName>EmissaoEmbarque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emissão Embarque</label>
    <type>Checkbox</type>
</CustomField>