force-app/main/default/objects/Interessado__c/fields/Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Faturamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faturamento</label>
    <type>Checkbox</type>
</CustomField>