force-app/main/default/objects/Interessado__c/fields/MensagemErro__c.field-meta.xml
<CustomField>
    <fullName>MensagemErro__c</fullName>
    <label>Mensagem de Erro</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>