force-app/main/default/objects/Interessado__c/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Nome Completo</description>
    <formula>Contato__r.FirstName &amp; &apos; &apos; &amp;  Contato__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nome Completo</inlineHelpText>
    <label>Nome</label>
    <type>Text</type>
</CustomField>