force-app/main/default/objects/Interessado__c/fields/NomeContato__c.field-meta.xml
<CustomField>
    <fullName>NomeContato__c</fullName>
    <description>Espelha o nome do contato</description>
    <formula>Contato__r.FirstName &amp; &apos; &apos; &amp; Contato__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Contato</label>
    <type>Text</type>
</CustomField>