force-app/main/default/objects/Interessado__c/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserva</label>
    <type>Checkbox</type>
</CustomField>