force-app/main/default/objects/Interessado__c/fields/TakeOffReport__c.field-meta.xml
<CustomField>
    <fullName>TakeOffReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Off Report</label>
    <type>Checkbox</type>
</CustomField>