force-app/main/default/objects/Interessado__c/fields/Voo__c.field-meta.xml
<CustomField>
    <fullName>Voo__c</fullName>
    <label>Voo</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Interessados</relationshipLabel>
    <relationshipName>Interessados</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>