force-app/main/default/objects/Interessado__c/recordTypes/Editavel.recordType-meta.xml
<RecordType>
    <fullName>Editavel</fullName>
    <active>true</active>
    <label>Editável</label>
</RecordType>