force-app/main/default/objects/Interessado__c/recordTypes/Novo.recordType-meta.xml
<RecordType>
    <fullName>Novo</fullName>
    <active>true</active>
    <label>Novo</label>
</RecordType>