force-app/main/default/objects/Interessado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>Contato__c</columns>
    <columns>ConclusaoTrecho__c</columns>
    <columns>ConclusaoVoo__c</columns>
    <columns>EmissaoEmbarque__c</columns>
    <columns>Faturamento__c</columns>
    <columns>Reserva__c</columns>
    <columns>TakeOffReport__c</columns>
    <columns>MensagemErro__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>